syntax = "proto3";

package com.pandepra.proto;

option java_outer_classname = "FastCacheProtos";

service FastCacheService {
  rpc put(PutRequest) returns (PutResponse) {}
  rpc get(GetRequest) returns (GetResponse) {}
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  string value = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string val = 1;
}